--- a/demoApp/Code.plist
+++ b/demoApp/Code.plist
@@ -2,6 +2,194 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>systemCode</key>
+	<dict>
+		<key>IDENTIFICATION_KBN</key>
+		<dict>
+			<key>IDENTIFICATION_UNENABLE</key>
+			<dict>
+				<key>code</key>
+				<integer>0</integer>
+				<key>name</key>
+				<string>本人確認書類として取り扱わない</string>
+			</dict>
+			<key>IDENTIFICATION_ENABLE</key>
+			<dict>
+				<key>code</key>
+				<integer>1</integer>
+				<key>name</key>
+				<string>本人確認書類として取り扱う</string>
+			</dict>
+		</dict>
+		<key>ENABLE_KBN</key>
+		<dict>
+			<key>UNENFORCE</key>
+			<dict>
+				<key>code</key>
+				<integer>0</integer>
+				<key>name</key>
+				<string>実施しない</string>
+			</dict>
+			<key>ENFORCE</key>
+			<dict>
+				<key>code</key>
+				<integer>1</integer>
+				<key>name</key>
+				<string>実施する</string>
+			</dict>
+		</dict>
+		<key>ID_DOC_KBN</key>
+		<dict>
+			<key>CARD_SPECIALIP</key>
+			<dict>
+				<key>code</key>
+				<integer>5</integer>
+				<key>name</key>
+				<string>特別永住者証明書</string>
+				<key>STM1</key>
+				<string>2</string>
+				<key>STM2</key>
+				<string>card_specialP_Resident_o.png</string>
+				<key>STM3</key>
+				<string>card_specialP_Resident_u.png</string>
+				<key>STM4</key>
+				<string>show_cert</string>
+			</dict>
+			<key>CARD_RESIDENCE</key>
+			<dict>
+				<key>code</key>
+				<integer>4</integer>
+				<key>name</key>
+				<string>在留カード</string>
+				<key>STM1</key>
+				<string>2</string>
+				<key>STM2</key>
+				<string>card_residence_o.png</string>
+				<key>STM3</key>
+				<string>card_residence_u.png</string>
+				<key>STM4</key>
+				<string>show_cert</string>
+			</dict>
+			<key>CARD_PASSPORT</key>
+			<dict>
+				<key>code</key>
+				<integer>3</integer>
+				<key>name</key>
+				<string>パスポート</string>
+				<key>STM1</key>
+				<string>2</string>
+				<key>STM2</key>
+				<string>card_passport_o.png</string>
+				<key>STM3</key>
+				<string>card_passport_u.png</string>
+				<key>STM4</key>
+				<string>ep</string>
+			</dict>
+			<key>CARD_MYNUMBER</key>
+			<dict>
+				<key>code</key>
+				<integer>2</integer>
+				<key>name</key>
+				<string>マイナンバーカード</string>
+				<key>STM1</key>
+				<string>1</string>
+				<key>STM2</key>
+				<string>card_mynumber_o.png</string>
+				<key>STM3</key>
+				<string></string>
+				<key>STM4</key>
+				<string>cardinfo</string>
+			</dict>
+			<key>CARD_DRIVER</key>
+			<dict>
+				<key>code</key>
+				<integer>1</integer>
+				<key>name</key>
+				<string>運転免許証</string>
+				<key>STM1</key>
+				<string>2</string>
+				<key>STM2</key>
+				<string>card_drivers_o.png</string>
+				<key>STM3</key>
+				<string>card_drivers_u.png</string>
+				<key>STM4</key>
+				<string>dl</string>
+			</dict>
+		</dict>
+		<key>ID_DOC_NFC_KBN</key>
+		<dict>
+			<key>CARD_DRIVER</key>
+			<dict>
+				<key>code</key>
+				<string>1</string>
+				<key>name</key>
+				<string>運転免許証</string>
+				<key>STM1</key>
+				<string>1</string>
+				<key>STM2</key>
+				<string>IC_illustration.png</string>
+			</dict>
+			<key>CARD_MYNUMBER</key>
+			<dict>
+				<key>code</key>
+				<string>2</string>
+				<key>name</key>
+				<string>マイナンバーカード</string>
+				<key>STM1</key>
+				<string>1</string>
+				<key>STM2</key>
+				<string>IC_illustration.png</string>
+			</dict>
+			<key>CARD_PASSPORT</key>
+			<dict>
+				<key>code</key>
+				<string>3</string>
+				<key>name</key>
+				<string>パスポート</string>
+				<key>STM1</key>
+				<string>1</string>
+			</dict>
+			<key>CARD_RESIDENCE</key>
+			<dict>
+				<key>code</key>
+				<string>4</string>
+				<key>name</key>
+				<string>在留カード</string>
+				<key>STM1</key>
+				<string>0</string>
+			</dict>
+			<key>CARD_SPECIALIP</key>
+			<dict>
+				<key>code</key>
+				<string>5</string>
+				<key>name</key>
+				<string>特別永住者証明書</string>
+				<key>STM1</key>
+				<string>0</string>
+			</dict>
+		</dict>
+		<key>READ_METHOD_KBN</key>
+		<dict>
+			<key>CAMERA</key>
+			<dict>
+				<key>code</key>
+				<string>1</string>
+				<key>name</key>
+				<string>カメラ撮影</string>
+				<key>STM1</key>
+				<string>Howtoread_camera.png</string>
+			</dict>
+			<key>NFC</key>
+			<dict>
+				<key>code</key>
+				<string>2</string>
+				<key>name</key>
+				<string>NFC読取</string>
+				<key>STM1</key>
+				<string>Howtoread_NFC.png</string>
+			</dict>
+		</dict>
+	</dict>
 	<key>errorCode</key>
 	<dict>
 		<key>EC01-001</key>
@@ -174,6 +362,18 @@
 			<string>OCR処理での内部エラー、不明なエラー</string>
 			<string>リトライ</string>
 		</array>
+		<key>SF-008-1I</key>
+		<array>
+			<string>ICチップの読取を開始します。端末から%1を離さないでください。</string>
+			<string>ICチップ読取開始</string>
+			<string></string>
+		</array>
+		<key>SF-008-2I</key>
+		<array>
+			<string>%1のICチップの情報を確認しています。</string>
+			<string>ICチップ読取完了時に表示</string>
+			<string></string>
+		</array>
 		<key>SF-001-01E</key>
 		<array>
 			<string>起動処理でエラーが発生しました。はいボタンタップで処理を終了します。</string>
@@ -191,6 +391,24 @@
 			<string>券面情報の読み取り回数が上限に達したため、処理を終了します。</string>
 			<string>OCR処理でOCR上限回数エラーの場合に表示するメッセージ。</string>
 			<string>メッセージ表示のポップアップのボタンタップでライブラリを終了する。</string>
+		</array>
+		<key>SF-008-1E</key>
+		<array>
+			<string>本人確認書類が%1ではありません。正しい本人確認書類をご使用の上、再度お試しください。。</string>
+			<string>NFC読取時の本人確認書類の種類チェックに表示するメッセージ。</string>
+			<string>正しい本人確認書類のNFC読取を行う。</string>
+		</array>
+		<key>SF-008-2E</key>
+		<array>
+			<string>%1がブロックされています。\n%2でブロック解除の申請をしてください。</string>
+			<string>NFC読取時の読取内容のチェックに表示するメッセージ。</string>
+			<string>指定の機関でブロック解除の申請をする。</string>
+		</array>
+		<key>SF-008-3E</key>
+		<array>
+			<string>%1が間違っています。%1を正しく入力してください。\n%2のこり%2回間違えるとブロックされます。</string>
+			<string>NFC読取時の読取内容のチェックに表示するメッセージ。</string>
+			<string>正しい暗証番号を入力する。</string>
 		</array>
 		<key>SF-008-4E</key>
 		<array>
@@ -222,6 +440,24 @@
 			<string>照合処理で画像不備エラーの場合に表示するメッセージ。</string>
 			<string>メッセージに記載の対処をする。</string>
 		</array>
+		<key>CM-001-01E</key>
+		<array>
+			<string>%1は%2で入力してください。</string>
+			<string>テキストボックスの属性チェック</string>
+			<string>%1を正しい属性で入力する。</string>
+		</array>
+		<key>CM-001-02E</key>
+		<array>
+			<string>%1処理において、通信エラーが発生しました。\n電波状態、端末の設定をご確認のうえ、時間をおいて再度お試しください。</string>
+			<string>サーバ通信処理にてエラーが発生した場合に表示するエラーメッセージ。</string>
+			<string>メッセージを閉じて、再実行を行う。</string>
+		</array>
+		<key>CM-001-03E</key>
+		<array>
+			<string>%1処理において、エラーが発生しました。再度お試しください。\n繰り返し発生する場合は、閉じるボタンより処理を終了してください。</string>
+			<string>処理にてエラーが発生した場合に表示するエラーメッセージ。（再実行しても、復旧が難しいパターン）</string>
+			<string>メッセージを閉じて、再実行を行う。繰り返し発生する場合は閉じるボタンよりライブラリを終了する。</string>
+		</array>
 		<key>CM-001-04E</key>
 		<array>
 			<string>カメラの起動に失敗しました。カメラの設定状態をご確認のうえ、再度お試しください。</string>
@@ -239,6 +475,12 @@
 			<string>操作開始から一定時間経過したため、本人確認処理を終了します。</string>
 			<string>API Gateway/FaceIDの認証トークン有効期限切れエラーの場合に表示するメッセージ。</string>
 			<string>メッセージ表示のポップアップのボタンタップでライブラリを終了する。</string>
+		</array>
+		<key>CM-001-07E</key>
+		<array>
+			<string>照合画像の認識に失敗しました。再度、本人確認書類の%1をしてください。</string>
+			<string>MegviiAWSにて受信画像より照合用画像の特定が不可能な場合のメッセージ。</string>
+			<string>メッセージ表示のポップアップのボタンタップで本人確認書類の選択より再処理する。</string>
 		</array>
 		<key>CM-001-08E</key>
 		<array>
