--- a/demoApp/Info.plist
+++ b/demoApp/Info.plist
@@ -27,6 +27,10 @@
 	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>cameraScan</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>location</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>location</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
